# ambient-weather-progenitor

./: .gitignore  Cargo.toml  LICENSE  README.md  ambient-weather.json
codegen/: Cargo.toml
codegen/src/: main.rs
examples/: query_device_data.rs
src/: lib.rs
