[package]
authors = ["Luke Frisken <l.frisken@gmail.com>"]
name = "ambient-weather-progenitor"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/kellpossible/ambient-weather-progenitor"
description = "A client for ambient-weather's REST api generated using progenitor"
[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
progenitor-client = { git = "https://github.com/oxidecomputer/progenitor" }

[workspace]
members = ["codegen"]
