[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
progenitor = { git = "https://github.com/oxidecomputer/progenitor" }
serde_json = "1.0.113"
prettyplease = "0.2.16"
syn = "2.0.48"
